
syntax = "proto3";
option csharp_namespace = "Cart.GrpcContracts"; 
package product;

service ProductService {
  rpc GetProduct (GetProductRequest) returns (GetProductResponse);
}

message GetProductRequest { string id = 1; }

message GetProductResponse {
  string id = 1;
  string name = 2;
  repeated string category = 3;
  string description = 4;
  string imageFile = 5;
  double price = 6;
  double quantity = 7; 
}
